@@ -1,10 +1,10 @@
 #
-# $Id: contours.dem,v 1.9 2003/10/28 05:35:54 sfeam Exp $
+# $Id: contours.dem,v 1.10 2004/09/17 05:01:12 sfeam Exp $
 #
 set samples 20
 set isosamples 21
-set xlabel "X axis" -5,-2
-set ylabel "Y axis" 4,-1
+set xlabel "X axis" offset -5,-2
+set ylabel "Y axis" offset 4,-1
 set zlabel "Z axis"
 set title "3D gnuplot demo - contour plot"
 set contour
